--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.exp::-webkit-scrollbar {
+    display: none;
+  }
+
+.custom-card-image .card.image-full::before{
+  border-radius: 0.5rem;
+  opacity: 0.45;
+  
+}
